ingress-bookmedik.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-bookmedik
spec:
  rules:
  - host: www.bookmedikalfonsora6.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bookmedik
            port:
              number: 80
